--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
   "author": "avantis",
   "license": "MIT",
   "dependencies": {
+    "benchmark": "^2.1.4",
+    "chai": "^4.3.4",
     "curlrequest": "^1.0.1",
     "dateformat": "^3.0.3",
+    "debug": "^4.3.1",
     "dotenv": "^8.2.0",
     "fs-extra": "^7.0.1",
     "helmet": "^3.21.2",
     "lodash": "^4.17.15",
+    "mocha": "^8.3.2",
     "npm": "^6.8.0",
     "path": "^0.12.7",
     "promise": "^8.0.2",
