--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "dateformat": "^3.0.3",
     "debug": "^4.3.1",
     "dotenv": "^8.2.0",
+    "events": "^3.3.0",
     "fs-extra": "^7.0.1",
     "helmet": "^3.21.2",
     "js-sql-parser": "^1.4.1",
     "lodash": "^4.17.15",
     "mocha": "^8.3.2",
+    "node-sql-parser": "^3.2.0",
     "npm": "^6.8.0",
     "path": "^0.12.7",
     "promise": "^8.0.2",
