--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 node_modules/
-_json_db_/
+_json_db_/*
 !_json_db_/benchmark_table.config.json
 !_json_db_/benchmark_table.data.json
 test/mocha.test.js
